build_errors.txt
   Compiling sabi v1.3.0 (C:\Users\bati-\OneDrive\Documents\AG-SysPro\src-tauri)
warning: unused import: `std::collections::HashMap`
 --> src\modules\system.rs:4:5
  |
4 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `read_reg_dword` and `version_is_newer`
  --> src\modules\system.rs:13:38
   |
13 | use crate::util::{hidden_powershell, read_reg_dword, version_is_newer};
   |                                      ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `sanitize_powershell_input`
  --> src\modules\performance.rs:12:38
   |
12 | use crate::util::{hidden_powershell, sanitize_powershell_input, scan_directory_size};
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::env`
 --> src\modules\network.rs:2:5
  |
2 | use std::env;
  |     ^^^^^^^^

error[E0061]: this function takes 2 arguments but 4 arguments were supplied
   --> src\modules\cleaner.rs:229:13
    |
229 |             crate::modules::webhook::send_webhook_event(
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
230 |                 "clean_junk_files",
231 |                 &format!("{:?}", category_ids),
    |                 ------------------------------ expected `Value`, found `&String`
232 |                 "success",
    |                 --------- unexpected argument #3 of type `&'static str`
233 |                 &format!("Removed {} files ({} bytes)", files_removed, manifest.total_bytes)
    |                 ---------------------------------------------------------------------------- unexpected argument #4 of type `&std::string::String`
    |
note: function defined here
   --> src\modules\webhook.rs:68:14
    |
 68 | pub async fn send_webhook_event(event_type: &str, payload: serde_json::Value) {
    |              ^^^^^^^^^^^^^^^^^^                   --------------------------
help: remove the extra arguments
    |
231 -                 &format!("{:?}", category_ids),
232 -                 "success",
233 -                 &format!("Removed {} files ({} bytes)", files_removed, manifest.total_bytes)
231 +                 /* serde_json::Value */
    |

error[E0061]: this function takes 2 arguments but 4 arguments were supplied
   --> src\modules\privacy.rs:256:13
    |
256 |             crate::modules::webhook::send_webhook_event(
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
257 |                 "clean_privacy_traces",
258 |                 &format!("{:?}", category_ids),
    |                 ------------------------------ expected `Value`, found `&String`
259 |                 "success",
    |                 --------- unexpected argument #3 of type `&'static str`
260 |                 &format!("Removed {} files ({} bytes)", files_removed, manifest.total_bytes)
    |                 ---------------------------------------------------------------------------- unexpected argument #4 of type `&std::string::String`
    |
note: function defined here
   --> src\modules\webhook.rs:68:14
    |
 68 | pub async fn send_webhook_event(event_type: &str, payload: serde_json::Value) {
    |              ^^^^^^^^^^^^^^^^^^                   --------------------------
help: remove the extra arguments
    |
258 -                 &format!("{:?}", category_ids),
259 -                 "success",
260 -                 &format!("Removed {} files ({} bytes)", files_removed, manifest.total_bytes)
258 +                 /* serde_json::Value */
    |

warning: unused variable: `worst`
   --> src\modules\disk.rs:520:21
    |
520 |                 let worst = attr.get("worst").and_then(|v| v.as_i64()).unwrap_or(100);
    |                     ^^^^^ help: if this is intentional, prefix it with an underscore: `_worst`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `stdout`
   --> src\modules\disk.rs:582:9
    |
582 |     let stdout = match output {
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_stdout`

For more information about this error, try `rustc --explain E0061`.
warning: `sabi` (lib) generated 6 warnings
error: could not compile `sabi` (lib) due to 2 previous errors; 6 warnings emitted
